--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -39,14 +39,29 @@ h3 {
   font-size: 24px;
 }
 
-.black {
-  color: black;
+.outer-container {
+    border: 1px dotted black;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
-
-#balance {
-  color: black;
+.inner-container {
+    border: 1px solid black;
+    display: inline-block;
+    position: relative;
 }
-
-.hint {
-  color: #666;
+.video-overlay {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    margin: 10px;
+    padding: 5px 5px;
+    font-size: 20px;
+    font-family: Helvetica;
+    color: #FFF;
+    background-color: rgba(50, 50, 50, 0.3);
+}
+iframe {
+    width: 100%;
+    height: 100%;
 }
