--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,67 +1,1 @@
-body{
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 10%;
-  font-family: "Open Sans", sans-serif;
-}
-
-label {
-  display: inline-block;
-  width: 100px;
-}
-
-input {
-  width: 500px;
-  padding: 5px;
-  font-size: 16px;
-}
-
-button {
-  font-size: 16px;
-  padding: 5px;
-}
-
-h1, h2 {
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: 0px;
-  margin-bottom: 10px;
-}
-
-h2 {
-  color: #AAA;
-  font-size: 32px;
-}
-
-h3 {
-  font-weight: normal;
-  color: #AAA;
-  font-size: 24px;
-}
-
-.outer-container {
-    border: 1px dotted black;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-.inner-container {
-    border: 1px solid black;
-    display: inline-block;
-    position: relative;
-}
-.video-overlay {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    margin: 10px;
-    padding: 5px 5px;
-    font-size: 20px;
-    font-family: Helvetica;
-    color: #FFF;
-    background-color: rgba(50, 50, 50, 0.3);
-}
-iframe {
-    width: 100%;
-    height: 100%;
-}
+.mario {background-color: red;}
