--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -5,6 +5,11 @@ body{
   font-family: "Open Sans", sans-serif;
 }
 
+#results-table {
+  font-size: 25px;
+  text-align: center;
+}
+
 label {
   display: inline-block;
   width: 100px;
