--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -5,6 +5,10 @@ body{
   font-family: "Open Sans", sans-serif;
 }
 
+.navbar-brand {
+  font-family: 'Russo One', sans-serif;
+}
+
 #results-table {
   font-size: 25px;
   text-align: center;
@@ -14,6 +18,7 @@ label {
   display: inline-block;
   width: 100px;
 }
+
 
 input {
   width: 500px;
@@ -33,6 +38,10 @@ h1, h2 {
   margin-bottom: 10px;
 }
 
+h1 {
+  font-family: 'Jura', sans-serif;
+}
+
 h2 {
   color: #AAA;
   font-size: 32px;
@@ -47,6 +56,7 @@ h3 {
 .black {
   color: black;
 }
+
 
 #balance {
   color: black;
